solve overflow problem
solve overflow problem

--- a/src/styles.css
+++ b/src/styles.css
@@ -42,7 +42,6 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
     background-image: url("./assets/img/nature.jpg");
-    overflow-y: hidden;
 }
 
 h1 {
